// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game context snapshots should perform sequence 0 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . w b . . . 
. . . . . . . . . . . . . . b w w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 0 correctly for sgf2 1`] = `
"
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . w . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 0 correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
. w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b . . w b b . 
. w b . w . w b . 
. w . . . . w . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf1 1`] = `
"
. . . . . . w b b b . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w w w w b w b . w w b b b w w . 
. w . w b w b b b b . w b . b b w b . 
w . w b b w b w . b . w b w . b b w . 
b w w b w w w w b . b b b . b b b w . 
b b w b b b b b . b w b b b w b w w w 
. b b . . . . b . b w b w w w b b b w 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . w . . 
b . b b . . b b . w b w b b b b b w . 
w b b b b b . b w b b b b w w . w w . 
w w w b w w b b b w w . b w w w w . . 
. . w w . w b w b w w b b w b w . w . 
. . . w . w w w w w b b . b b b w . . 
. . . . . . . . . w w b . . b w w . . 
. . . . . . . . . w b b b b . w . . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf2 1`] = `
"
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . w . . . . 
. w b w w b w w b b b b b w b w w w . 
. w b w . b b b b . b b w w b b b w w 
. w b w . b . b . b w w w b . . b b b 
. b w w w b w . b w . w b . b . w w . 
. w w w b w w . b w w w b b . . . . . 
w . . w b . . . . b w b . w b b . b b 
b w . w b . . . . . b b . w w . b b w 
b b w w b . . b . . . . b b b b w w w 
. . b b b b b b b b b b w w w b w . . 
b b b . b w b w w w w w . b w w w w . 
b w w w b w w . w . w . . w b b b w w 
w w . w . w . w b b w . . w w b b b w 
. . . . w . w w b . w . . w b . b w w 
. . . w w w b b b . w w . w b . b b b 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . b w w w b . . . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
b w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b w w . w b b 
. w b b w . w w w 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . w w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf2 1`] = `
"
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b w b . . . 
. b b b w w b b . 
. w . b . . w b . 
w . w b w . w b . 
. w b b w b w b . 
. w b . . w b b . 
. w b . w . w . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf2 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . . . . . . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf3 1`] = `
"
. . . . . . . . . 
. . w b w b . . . 
. . b . w w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf2 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . . . . . . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf3 1`] = `
"
. . . . . . . . . 
. . w b w b . . . 
. . b b w w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . w . . . . . . . b w . . 
. . . w . . . b . b . . . . . b w . . 
. . . . . . . . . . . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf2 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. b w . . . . . . . . . . . . . . . . 
. . b w . . . . . . . . . w . w w w . 
. . b w . . . . . . . . . . b b b w . 
. . b w . . . . . . . . . . . . b b . 
. b w . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b w b . . . 
. b b b w w b b . 
. w . b . . w b . 
w . w b w . w b . 
. w b b . . w b . 
. w b . . w b b . 
. . . . w . w . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf1 1`] = `
"
. . . . . . w . w . . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w . w w b w b . w w b b b w . . 
. w . w . . . b b b . w b . b b w . . 
. . w b . w . . . . . w b w . b b w . 
. w w b . w w . b w b b b . b b b w . 
. b w b . b b b . b w b b b w b w w . 
. b b . . . . b . b w b w w w b b . . 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . . . . 
b . . b . . b b . w b w b b . b b w . 
w b b b b b . b w b b b . . . . . w . 
w w w b w w b b b w . . b w w w w . . 
. . w w . w b w b w . . b w b w . w . 
. . . w . w w w w . . b w b b b w . . 
. . . . . . . . . w . b w w b . w . . 
. . . . . . . . . . . . . b . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf2 1`] = `
"
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . . . . . . 
. w b w w b w w b b b b . w . w w w . 
. w b w . b b b b . . . w . b b b w . 
. w b w . b . b . b w . w b . . b b b 
. b w . w b w . b w . w b . b . w w . 
. w w w b w w . b w w . b b . . . . . 
. . . . b . . . . b . . . w b b . b b 
. w . w b . . . . . . b . w w . b b w 
. b . w b . . b . . . . b b b b . w w 
. . . . b . b . b . b . w w w b w . . 
b b b . b . . w . w w w . b w w w w . 
b w w . . . w . w . w . . . . b b w . 
w w . w . w . w b . . . . w . . b b w 
. . . . w . w w b . w . . . . . b w . 
. . . w w w b b b . w w . w b . b . . 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf3 1`] = `
"
. . . . . . . . . 
. . . . . . . . . 
. . b . . w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf1 1`] = `
"
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . w . b . . 
. . b . . . . . . . . . w . w b . . . 
. . . . . . . . . . . . . . b w w . . 
. . . . . . . . . . . . . . b . . . . 
. . . b . . . . . . . . . . . . b w . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf2 1`] = `
"
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . b w . . . . . . . . . . . . 
. . . w w w b . b . . . . w b . b . . 
. . . . w b . . . . . . . . b . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
. w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b . w . w b b 
. w . b w . w w . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf1 1`] = `
"
. . . . . . w b b b . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w w w w b w b . w w b b b w w . 
. w . w b w b b b b . w b . b b w b . 
w . w b b w b w . b . w b w . b b w . 
b w w b w w w w b . b b b . b b b w . 
b b w b b b b b . b w b b b w b w w w 
. b b . . . . b . b w b w w w b b b w 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . w . . 
b . b b . . b b . w b w b b b b b w . 
w b b b b b . b w b b b b w w . w w . 
w w w b w w b b b w w . b w w w w . . 
. . w w . w b w b w w b b w b w . w . 
. . . w . w w w w w b b . b b b w . . 
. . . . . . . . . w w b . . b w w . . 
. . . . . . . . . w b b b b . w . . . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf2 1`] = `
"
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . w . . . . 
. w b w w b w w b b b b b w b w w w . 
. w b w . b b b b . b b w w b b b w w 
. w b w . b . b . b w w w b . . b b b 
. b w w w b w . b w . w b . b . w w . 
. w w w b w w . b w w w b b . . . . . 
w . . w b . . . . b w b . w b b . b b 
b w . w b . . . . . b b . w w . b b w 
b b w w b . . b . . . . b b b b w w w 
. . b b b b b b b b b b w w w b w . . 
b b b . b w b w w w w w . b w w w w . 
b w w w b w w . w . w . . w b b b w w 
w w . w . w . w b b w . . w w b b b w 
. . . . w . w w b . w . . w b . b w w 
. . . w w w b b b . w w . w b . b b b 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . b w w w b . . . . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf3 1`] = `
"
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
b w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b w w . w b b 
. w b b w . w w w 
"
`;
